kubernetes/grafana/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.skippythesnake.com`)
      kind: Rule
      services:
        - name: grafana-webui
          port: 3000
